--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
     </section>
 
     <main class="page-wrapper">
-        <section class="page-wrapper" id="about">
+
+        <section class="page-section" id="about">
             <h2>About Me</h2>
             <div>
                 <p>
-                    I am currently studying to be a full stack wev developer
+                    My name is Caroline Phillips and I am currently studying to be a full stack web developer. I have worked in many different industries over the years such as: marketing, sales, and business support roles. I am very excited to become a certified full stack developer so I can take a step towards my new career path!
                 </p>
                 <p>
-                    When I am not working or studying, you can find me skiing the best snow on earth or riding my horses.
+                    When I am not working or studying, you can find me skiing the best snow on earth or riding my horses. I am from Salt Lake City, Utah and I am so lucky to not only live in a beautiful place, but also live in a place that has a growing job market for web developers!
                 </p>
             </div>
         </section>
@@ -63,7 +64,7 @@
                     </div>
                 </a>
 
-                <a href="#" class="flex-item runbuddy">
+                <a href="#" class="flex-item" id="runbuddy">
                     <div>
                         <h3>Run Buddy</h3>
                         <span>HTML/CSS</span>
