--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </p>
                 
                 <p>
-                    When I am not working or studying, you can find me skiing the best snow on earth or riding my horses. I am from Salt Lake City, Utah and I am so lucky to not only live in a beautiful place, but also live in a place that has a growing job market for web developers!
+                    When I am not working or studying, you can find me skiing the best snow on earth or riding my horses. I am from Salt Lake City, Utah and I am so lucky to not only live in a beautiful place, but also live in a place that has a growing job market for the web development industry.
                 </p>
             </div>
         </section>
