--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     </div>
                 </a>
 
-                <a href="#" class="flex-item" id="pastel-puzzels">
+                <a href="https://lylekilson.github.io/entertainment-720/" class="flex-item" id="entertainment-720">
                     <div>
-                        <h3>Pastel Puzzels</h3>
+                        <h3>Entertainment 720</h3>
                         <span>MERN Stack</span>
                     </div>
                 </a>
