--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                 </a>
 
-                <a href="https://lylekilson.github.io/entertainment-720/" class="flex-item" id="entertainment-720">
+                <a href="https://caroline1418.github.io/entertainment720/" class="flex-item" id="entertainment-720">
                     <div>
                         <h3>Entertainment 720</h3>
                         <span>MERN Stack</span>
