--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="page-section" id="about">
             <h2>About Me</h2>
             <div>
-                <img src="./slovenian alps.jpeg" alt="Me taking a picture in front of the Slovenian Apls">
+                <img src="./public/images/slovenian alps.jpeg" alt="Me taking a picture in front of the Slovenian Apls">
                 <p>
                     My name is Caroline Phillips and I am currently studying to be a full stack web developer. I have worked in many different industries over the years such as: marketing, sales, and business support roles. I am very excited to become a certified full stack developer so I can take a step towards my new career path!
                 </p>
@@ -57,10 +57,10 @@
                     </div>
                 </a>
 
-                <a href="#" class="flex-item" id="calculator">
+                <a href="https://radiant-headland-22067.herokuapp.com/" class="flex-item" id="auto-maintenance-log">
                     <div>
-                        <h3>Calculator</h3>
-                        <span>React/JavaScript/CSS</span>
+                        <h3>Auto Maintenance Log</h3>
+                        <span>Full Stack</span>
                     </div>
                 </a>
 
