--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
         <meta charset="utf-8" />
         <title>Caroline Phillips</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
+        <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <link href="./style.css" rel="stylesheet" />
     </head>
     <body id="page-top">
@@ -40,17 +39,23 @@
         <main class="page-wrapper">
 
             <section class="page-section" id="about">
-                <div class="container">
-                    <div class="text-center">
-                        <h2 class="section-heading text-uppercase">About Me</h2>
-                        <p class="section-subheading text-muted"> My name is Caroline Phillips and I am currently studying to be a full stack web developer. I have worked in many different industries over the years such as: marketing, sales, and business support roles. I am very excited to become a certified full stack developer so I can take a step towards my new career path!</p>
-                        <p class="section-subheading text-muted">When I am not working or studying, you can find me skiing the best snow on earth or riding my horses. I am from Salt Lake City, Utah and I am so lucky to not only live in a beautiful place, but also live in a place that has a growing job market for the web development industry.</p>
+                    <div class="box">
+                        <h2 class="text-uppercase text-center">Get To Know Me</h2>
+                    </div>
+                    <div class="col-lg box2 row">
+                        <p class="text-center"> My name is Caroline Phillips and I am currently studying to be a full stack web developer. I have worked in many different industries over the years such as: marketing, sales, and business support roles. I am very excited to become a certified full stack developer so I can take a step towards my new career path!</p>
+                    </div>
+                    <div class="col-lg box3 row justify-content-right">
+                        <p class="text-center">When I am not working or studying, you can find me skiing the best snow on earth or riding my horses. I am from Salt Lake City, Utah and I am so lucky to not only live in a beautiful place, but also live in a place that has a growing job market for the web development industry.</p>
+                    </div>
+                    <div class="col-lg me row justify-content-center">
+                        <img src="./public/images/CARRRRRRRRRRL.PNG">
                     </div>
                 </div>
             </section>
 
-            <section class="page-section bg-light" id="Work">
-                <div class="container">
+            <section class="page-section bg-#1f1e1e" id="work">
+                <div class="container2">
                     <div class="text-center">
                         <h2 class="section-heading text-uppercase">My Work</h2>
                     </div>
@@ -79,42 +84,49 @@
                                 </div>
                         </div>
                     </div> -->
-                    <div class="col-lg-1">
+                    <div class="col-lg-12">
                         <div class="auto-log">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <h3>Auto Maintenance Log</h3>
-                                        <span>Full Stack</span>
+                                <div class="portfolio-hover container">
+                                    <div class="portfolio-hover-content row justify-content-md-center">
+                                        <h3 class="col-md text-center">Auto Maintenance Log</h3>
+                                        <div class="row">
+                                        <span class="col">Full Stack</span>
+                                        </div>
                                         <br>
                                         <button><a href="https://radiant-headland-22067.herokuapp.com/">Browse This Project</a></button>
                                     </div>
                                 </div>
                         </div>
                     </div>
-                    <div class="col-lg-1">
+                    <div class="col-lg">
                         <div class="e720">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <h3>Entertainment 720</h3>
-                                        <span>MERN Stack</span>
+                                <div class="portfolio-hover container">
+                                    <div class="portfolio-hover-content row justify-content-md-center">
+                                        <h3 class="col-md text-center">Entertainment 720</h3>
+                                        <div class="row">
+                                        <span class="col">Full Stack</span>
+                                        </div>
                                         <br>
-                                        <button><a href="https://caroline1418.github.io/entertainment720/">Take a Look</a></button>
+                                        <button><a href="https://caroline1418.github.io/entertainment720/">Browse This Project</a></button>
                                     </div>
                                 </div>
                         </div>
                     </div>
-                    <div class="col-lg-1">
+                    <div class="col-lg">
                         <div class="run-buddy">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <h3>Run Buddy</h3>
-                                        <span>HTML/CSS</span>
+                                <div class="portfolio-hover container">
+                                    <div class="portfolio-hover-content row justify-content-md-center">
+                                        <h3 class="col-md text-center">Run Buddy Application</h3>
+                                        <div class="row">
+                                        <span class="col">HTML/CSS</span>
+                                        </div>
                                         <br>
-                                        <button><a href="https://caroline1418.github.io/Run-Buddy/">Check It Out</a></button>
+                                        <button><a href="https://caroline1418.github.io/entertainment720/">Browse This Project</a></button>
                                     </div>
                                 </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </section>
@@ -135,15 +147,9 @@
         </section>
         </main>
         </div>
-        <!-- Bootstrap core JS-->
+        <!-- Core theme JS-->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Third party plugin JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-        <!-- Contact form JS-->
-        <script src="assets/mail/jqBootstrapValidation.js"></script>
-        <script src="assets/mail/contact_me.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="./script.js"></script>
     </body>
 </html>
