--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="utf-8" />
         <title>Caroline Phillips</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="public/images/favicon-1.png" />
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
+        
         <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <link href="./style.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- Navigation-->
+        
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <h1>Caroline Phillips</h1>
@@ -42,7 +42,7 @@
                     <div class="box">
                         <h2 class="text-uppercase text-center">Get To Know Me</h2>
                     </div>
-                    <div class="col-lg box2 row">
+                    <div class="col box2 row">
                         <p class="text-center"> My name is Caroline Phillips and I am currently studying to be a full stack web developer. I have worked in many different industries over the years such as: marketing, sales, and business support roles. I am very excited to become a certified full stack developer so I can take a step towards my new career path!</p>
                     </div>
                     <div class="col-lg box3 row justify-content-right">
@@ -84,11 +84,11 @@
                                 </div>
                         </div>
                     </div> -->
-                    <div class="col-lg-12">
+                    <div class="col-12">
                         <div class="auto-log">
                                 <div class="portfolio-hover container">
                                     <div class="portfolio-hover-content row justify-content-md-center">
-                                        <h3 class="col-md text-center">Auto Maintenance Log</h3>
+                                        <h3 class="col text-center">Auto Maintenance Log</h3>
                                         <div class="row">
                                         <span class="col">Full Stack</span>
                                         </div>
@@ -98,13 +98,13 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="col-lg">
+                    <div class="col">
                         <div class="e720">
                                 <div class="portfolio-hover container">
                                     <div class="portfolio-hover-content row justify-content-md-center">
-                                        <h3 class="col-md text-center">Entertainment 720</h3>
+                                        <h3 class="col text-center">Entertainment 720</h3>
                                         <div class="row">
-                                        <span class="col">Full Stack</span>
+                                        <span class="col">Front End</span>
                                         </div>
                                         <br>
                                         <button><a href="https://caroline1418.github.io/entertainment720/">Browse This Project</a></button>
@@ -112,11 +112,11 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="col-lg">
+                    <div class="col">
                         <div class="run-buddy">
                                 <div class="portfolio-hover container">
                                     <div class="portfolio-hover-content row justify-content-md-center">
-                                        <h3 class="col-md text-center">Run Buddy Application</h3>
+                                        <h3 class="col text-center">Run Buddy Application</h3>
                                         <div class="row">
                                         <span class="col">HTML/CSS</span>
                                         </div>
